Add google-analytics to project.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,16 @@
     <meta name="description" content="Matilde Wittrup site">
 
     <title>Matilde Wittrup</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137818733-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-137818733-1');
+    </script>
+    <base href="/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
