--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
+    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
+
     <meta name="theme-color" content="#000000" />
 
     <!-- Fonts -->
